src/snapshots/tuzuku__insta__test_print_string_chunk_print.snap
---
source: src/insta.rs
assertion_line: 14
expression: "String::from_utf8_lossy(&chunk_print)"
---
 offset | line | opcode         | constants
 000000 | 0001 | OP_CONSTANT    | foobar
 000002 | 0001 | OP_PRINT       |

