src/snapshots/tuzuku__insta__test_print_string_stdout.snap
---
source: src/insta.rs
assertion_line: 41
expression: "String::from_utf8_lossy(&stdout)"
---
foobar

