src/snapshots/tuzuku__insta__test_return_test_return_initial_code_chunk_print.snap
---
source: src/insta.rs
assertion_line: 28
expression: "String::from_utf8_lossy(&chunk_print)"
---
==== test_return_initial_code ====
 offset | line | opcode           | constants
 000000 | 0002 | OP_CONSTANT      | <function foo>
 000002 | 0002 | OP_SET_GLOBAL    | foo
 000004 | 0008 | OP_GET_GLOBAL    | foo
 000006 | 0008 | OP_CALL          | 0
 000008 | 0008 | OP_PRINT         |

